# astrobench

./: .gitignore  README.md  pyproject.toml
examples/: eval_openai.sh  eval_reasoning_model.sh  eval_vllm.sh
tasks/gpqa_astro/: gpqa_astro.yaml  utils.py
tasks/super_gpq_astro/: super_gpqa_astro.yaml  utils.py
