[project]
name = "astrobench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.0",
    "lm-eval==0.4.8",
    "openai>=1.66.3",
    "tenacity>=9.0.0",
    "torch==2.5.1",
    "vllm==0.7.3",
]

[tool.uv.sources]
lm-eval = { git = "ssh://git@github.com/Maxwell-Jia/lm-evaluation-harness.git", rev = "5fbcead9b4231115c850a6cc3df3ad474a911d2d" }
